[gd_scene load_steps=18 format=2]

[ext_resource path="res://game/ui/buttons/MenuButton.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/sfx/ui/choose03.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/sfx/ui/choose04.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/ui/menu/menu.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/menu/menu_select.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/ethnocentric rg.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/themes/test_button_hover_theme.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/themes/test_button_normal_theme.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/ethnocentric rg.ttf"

[sub_resource type="DynamicFont" id=3]
size = 1
font_data = SubResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = ExtResource( 7 )
Button/styles/normal = ExtResource( 8 )
Button/styles/pressed = null
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 284, 73 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 284, 73 )
modulate_color = Color( 0.505882, 0.505882, 0.505882, 1 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 284, 73 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 284, 73 )
modulate_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 284, 73 )

[node name="Button" type="Button"]
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
rect_pivot_offset = Vector2( 255.943, 103 )
theme = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "New Game      "
align = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selection" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
bus = "UI"

[node name="Move" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -30.0
bus = "UI"
[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
